--- a/Dynamic_Server/package.json
+++ b/Dynamic_Server/package.json
@@ -11,8 +11,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "dotenv": "^16.4.5",
+    "dotenv": "^16.5.0",
     "express": "^4.21.2",
+    "radis": "^2.0.0",
     "uuid": "^11.0.3"
   },
   "devDependencies": {
