--- a/Dynamic_Server/package.json
+++ b/Dynamic_Server/package.json
@@ -5,12 +5,13 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon -r tsconfig-paths/register ./server.js"
+    "start": "nodemon ./server.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios-retry": "^4.5.0",
     "dotenv": "^16.5.0",
     "express": "^4.21.2",
     "radis": "^2.0.0",
