--- a/Dynamic_Server/package.json
+++ b/Dynamic_Server/package.json
@@ -15,6 +15,7 @@
     "dotenv": "^16.5.0",
     "express": "^4.21.2",
     "radis": "^2.0.0",
+    "redis": "^5.5.6",
     "uuid": "^11.0.3"
   },
   "devDependencies": {
