--- a/Dynamic_Server/package.json
+++ b/Dynamic_Server/package.json
@@ -15,6 +15,7 @@
     "axios-retry": "^4.5.0",
     "dotenv": "^16.5.0",
     "express": "^4.21.2",
+    "jsdom": "^26.1.0",
     "radis": "^2.0.0",
     "redis": "^5.5.6",
     "uuid": "^11.0.3"
