상수 리팩토링 및 계산기/유틸리티 추가
마켓 코드와 게임 데이터를 상수 아래에 별도의 파일로 분할하고, 그에 따라 임포트를 업데이트합니다. 보석 및 유물 계산을 위한 새로운 유틸리티 및 계산기 모듈을 추가하고, 무기고, 마켓, 제련에 대한 유형 정의를 도입합니다. 오류 처리 미들웨어를 개선하고, 캐릭터/스펙 경로를 확장하고, 더 나은 모듈성과 유지 관리를 위해 서비스 및 컨트롤러 로직을 정리합니다. 더 이상 사용되지 않는 specsService를 제거하고 package.json 메타데이터와 스크립트를 업데이트합니다.

--- a/Dynamic_Server/package.json
+++ b/Dynamic_Server/package.json
@@ -1,15 +1,26 @@
 {
-  "name": "dynamic-server",
+  "name": "lostark-dynamic-server",
   "version": "1.0.0",
-  "description": "",
-  "main": "server.js",
+  "description": "로스트아크 게임 데이터를 제공하는 API 서버",
+  "main": "dist/index.js",
   "type": "commonjs",
   "scripts": {
     "dev": "ts-node-dev --respawn src/index.ts",
     "build": "tsc",
-    "start": "node dist/index.js"
+    "start": "node dist/index.js",
+    "clean": "rm -rf dist",
+    "rebuild": "npm run clean && npm run build",
+    "lint": "eslint src/**/*.ts",
+    "format": "prettier --write src/**/*.ts",
+    "type-check": "tsc --noEmit"
   },
-  "keywords": [],
+  "keywords": [
+    "lostark",
+    "api",
+    "game",
+    "typescript",
+    "express"
+  ],
   "author": "",
   "license": "ISC",
   "dependencies": {
